crates/executor/src/tests/snapshots/session/query_alter_session_set.snap
---
source: crates/executor/src/tests/query.rs
description: "\"SHOW VARIABLES\""
info: "Setup queries: ALTER SESSION SET v1 = 'test'"
---
Ok(
    [
        "+------+-------+------+---------+",
        "| name | value | type | comment |",
        "+------+-------+------+---------+",
        "| v1   | test  | text |         |",
        "+------+-------+------+---------+",
    ],
)
