crates/executor/src/tests/snapshots/session/query_alter_session_unset.snap
---
source: crates/executor/src/tests/query.rs
description: "\"SHOW VARIABLES\""
info: "Setup queries: ALTER SESSION SET v1 = 'test' v2 = 1; ALTER SESSION UNSET v1"
---
Ok(
    [
        "+------+-------+-------+---------+",
        "| name | value | type  | comment |",
        "+------+-------+-------+---------+",
        "| v2   | 1     | fixed |         |",
        "+------+-------+-------+---------+",
    ],
)
