crates/executor/src/tests/snapshots/session/query_explain_select.snap
---
source: crates/executor/src/tests/query.rs
description: "\"EXPLAIN SELECT * FROM embucket.public.employee_table\""
info: "Setup queries: SET datafusion.explain.logical_plan_only = true"
---
Ok(
    [
        "+--------------+----------------------------------------------------------------------------------------------------------+",
        "| plan_type    | plan                                                                                                     |",
        "+--------------+----------------------------------------------------------------------------------------------------------+",
        "| logical_plan | TableScan: embucket.public.employee_table projection=[employee_id, last_name, first_name, department_id] |",
        "+--------------+----------------------------------------------------------------------------------------------------------+",
    ],
)
