crates/executor/src/tests/snapshots/session/query_explain_select_column.snap
---
source: crates/executor/src/tests/query.rs
description: "\"EXPLAIN SELECT last_name FROM embucket.public.employee_table limit 1\""
info: "Setup queries: SET datafusion.explain.logical_plan_only = true"
---
Ok(
    [
        "+--------------+-----------------------------------------------------------------------------+",
        "| plan_type    | plan                                                                        |",
        "+--------------+-----------------------------------------------------------------------------+",
        "| logical_plan | Limit: skip=0, fetch=1                                                      |",
        "|              |   TableScan: embucket.public.employee_table projection=[last_name], fetch=1 |",
        "+--------------+-----------------------------------------------------------------------------+",
    ],
)
