crates/executor/src/tests/snapshots/session/query_session_current_schemas.snap
---
source: crates/executor/src/tests/query.rs
description: "\"SELECT CURRENT_SCHEMAS()\""
---
Ok(
    [
        "+-------------------+",
        "| current_schemas   |",
        "+-------------------+",
        "| [embucket.public] |",
        "+-------------------+",
    ],
)
