crates/executor/src/tests/snapshots/session/query_session_current_schemas_with_aliases.snap
---
source: crates/executor/src/tests/query.rs
description: "\"SELECT CURRENT_SCHEMAS() as sc\""
---
Ok(
    [
        "+-------------------+",
        "| sc                |",
        "+-------------------+",
        "| [embucket.public] |",
        "+-------------------+",
    ],
)
