crates/executor/src/tests/snapshots/session/query_session_current_session.snap
---
source: crates/executor/src/tests/query.rs
description: "\"SELECT length(CURRENT_SESSION())\""
---
Ok(
    [
        "+-------------------------+",
        "| length(current_session) |",
        "+-------------------------+",
        "| 36                      |",
        "+-------------------------+",
    ],
)
