crates/executor/src/tests/snapshots/session/query_session_general.snap
---
source: crates/executor/src/tests/query.rs
description: "\"SELECT CURRENT_VERSION(), CURRENT_CLIENT()\""
---
Ok(
    [
        "+-----------------+----------------+",
        "| current_version | current_client |",
        "+-----------------+----------------+",
        "| 0.1.0           | Embucket 0.1.0 |",
        "+-----------------+----------------+",
    ],
)
